--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "see_vee",
-    "short_name": "see_vee",
+    "name": "minimalist_cv",
+    "short_name": "minimalist_cv",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
