--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "see_vee" "\0"
+            VALUE "FileDescription", "minimalist_cv" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "see_vee" "\0"
+            VALUE "InternalName", "minimalist_cv" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "see_vee.exe" "\0"
-            VALUE "ProductName", "see_vee" "\0"
+            VALUE "OriginalFilename", "minimalist_cv.exe" "\0"
+            VALUE "ProductName", "minimalist_cv" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
