--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: minimalist_cv
-description: "A Minimalist CV build with Flutter"
+name: see_vee
+description: "A new Flutter project."
 publish_to: "none"
 version: 0.1.0
 
@@ -22,7 +22,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/data/
   fonts:
     - family: "Jetbrains Mono"
       fonts:
