--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/data/
   fonts:
     - family: "Jetbrains Mono"
       fonts:
