chore: Update project name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: see_vee
-description: "A new Flutter project."
+name: jiann_cv
+description: "A minimalist CV web app for everyone"
 publish_to: "none"
 version: 0.1.0
 
