--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   provider: ^6.1.1
   url_launcher: ^6.2.3
+  printing: ^5.10.0
+  pdf: ^3.10.0
 
 dev_dependencies:
   flutter_test:
