--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,15 @@ flutter:
     - assets/images/
     - assets/data/
   fonts:
-    - family: "Jetbrains Mono"
+    - family: "Fira Code"
       fonts:
-        - asset: assets/fonts/JetBrainsMono-Bold.ttf
-        - asset: assets/fonts/JetBrainsMono-SemiBold.ttf
-        - asset: assets/fonts/JetBrainsMono-Regular.ttf
-        - asset: assets/fonts/JetBrainsMono-Thin.ttf
+        - asset: assets/fonts/FiraCode-Light.ttf
+          weight: 300
+        - asset: assets/fonts/FiraCode-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/FiraCode-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/FiraCode-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/FiraCode-Bold.ttf
+          weight: 700
