--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_layout_grid: ^2.0.8
   font_awesome_flutter: ^10.6.0
   provider: ^6.1.1
   url_launcher: ^6.2.3
